[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/hud.gd" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TopPanel" type="Panel" parent="."]

[node name="WaveLabel" type="Label" parent="TopPanel"]
text = "Wave 1"

[node name="BottomPanel" type="Panel" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel"]

[node name="SummonSoldierBtn" type="Button" parent="BottomPanel/HBoxContainer"]
text = "Soldier"

[node name="SummonTankBtn" type="Button" parent="BottomPanel/HBoxContainer"]
text = "Tank"

[node name="SummonDroneBtn" type="Button" parent="BottomPanel/HBoxContainer"]
text = "Drone"

[node name="BuildTowerBtn" type="Button" parent="BottomPanel/HBoxContainer"]
text = "Tower"

[node name="BuildBarracksBtn" type="Button" parent="BottomPanel/HBoxContainer"]
text = "Barracks"

[node name="SummonCollectorBtn" type="Button" parent="BottomPanel/HBoxContainer"]
text = "Collector" 